<resources>
    <string name="app_name">Telegami</string>

    <!-- Titles -->
    <string name="title_features">Features</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_about_fork">About this fork</string>

    <string name="follow_system">Follow system</string>

    <!-- Home -->
    <string name="home_xposed_activated">Module Activated [%s]</string>
    <string name="home_xposed_not_activated">Module Not Activated</string>

    <!-- Features -->
    <string name="feat_category_privacy">Privacy</string>
    <string name="feat_category_messages">Messages</string>
    <string name="feat_category_misc">Misc</string>

    <string name="feat_hide_seen">Hide seen status</string>
    <string name="feat_hide_seen_desc">Hide seen status for messages</string>
    <string name="feat_hide_seen_private_chat">Private chat</string>
    <string name="feat_hide_seen_channel">Channel</string>
    <string name="feat_hide_story_view_status">Hide story view status</string>
    <string name="feat_hide_story_view_status_desc">Hide story view status</string>
    <string name="feat_hide_online_status">Hide online status</string>
    <string name="feat_hide_online_status_desc">Hide online status</string>
    <string name="feat_hide_typing">Hide typing</string>
    <string name="feat_hide_typing_desc">Hide typing</string>
    <string name="feat_show_deleted_messages">Show deleted messages</string>
    <string name="feat_show_deleted_messages_desc">Show deleted messages</string>
    <string name="feat_mark_messages">Mark messages</string>
    <string name="feat_mark_messages_desc">Mark messages in chat</string>
    <string name="feat_mark_messages_deleted">Deleted</string>
    <string name="feat_mark_messages_edited">Edited</string>
    <string name="feat_prevent_secret_media_deletion">Prevent secret media deletion</string>
    <string name="feat_prevent_secret_media_deletion_desc">Prevent deletion of secret media</string>
    <string name="feat_unlock_channel_features">Unlock channel features</string>
    <string name="feat_unlock_channel_features_desc">Unlock all restricted and encrypted features for channels</string>
    <string name="feat_allow_save_videos">Allow saving videos</string>
    <string name="feat_allow_save_videos_desc">Allow saving videos to the gallery</string>
    <string name="feat_disable_ads">Disable Advertisement</string>
    <string name="feat_disable_ads_desc">Disable Advertisement</string>
    <string name="feat_fake_premium">Fake Premium</string>
    <string name="feat_fake_premium_desc">Fake Premium</string>
    <string name="feat_boost_download">Download boost</string>
    <string name="feat_boost_download_desc">Increase download speed</string>
    <string name="feat_boost_download_off">OFF</string>
    <string name="feat_boost_download_on">ON</string>
    <string name="feat_boost_download_extreme">EXTREME</string>

    <!-- Settings -->
    <string name="settings_theme">Theme</string>
    <string name="settings_system_theme_color">System theme color</string>
    <string name="settings_theme_color">Theme color</string>
    <string name="settings_dark_theme">Dark theme</string>
    <string name="settings_pure_black_dark_theme">Pure black dark theme</string>
    <string name="settings_pure_black_dark_theme_summary">Use the pure black theme if dark theme is enabled</string>

    <string name="settings_module">Module</string>
    <string name="settings_hide_icon">Hide module icon in launcher</string>
    <string name="settings_hide_icon_summary">You can still open the app in Xposed manager</string>

    <!-- About -->
    <string name="about_description">Telegami is an Xposed module designed to enhance your Telegram experience with various privacy and utility features.\n\nThis module allows you to hide your online status, typing indicators, seen status for messages and stories, and more. It can also show deleted messages and prevent media from being deleted in secret chats.</string>
    <string name="about_fork_description">Telegami is a fork of TeleVip-Lsposed (@mustafa1dev), created to continue development as an open-source project with additional features and improvements.</string>
    <string name="about_developer">Developer</string>
    <string name="about_credit">Credits</string>
    <string name="about_support">Support and feedback</string>

    <!-- Colors -->
    <string name="color_sakura">Sakura</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_deep_purple">Deep purple</string>
    <string name="color_indigo">Indigo</string>
    <string name="color_blue">Blue</string>
    <string name="color_light_blue">Light blue</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_teal">Teal</string>
    <string name="color_green">Green</string>
    <string name="color_light_green">Light green</string>
    <string name="color_lime">Lime</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_amber">Amber</string>
    <string name="color_orange">Orange</string>
    <string name="color_deep_orange">Deep orange</string>
    <string name="color_brown">Brown</string>
    <string name="color_blue_grey">Blue grey</string>

    <!-- Dark theme modes -->
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_off">Always off</string>
    <string name="dark_theme_on">Always on</string>
</resources>
