<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_theme">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:icon="@drawable/outline_palette_24"
            android:key="followSystemAccent"
            app:singleLineTitle="false"
            android:title="@string/settings_system_theme_color" />
        <ListPreference
            android:defaultValue="MATERIAL_BLUE"
            android:dependency="followSystemAccent"
            android:entries="@array/color_texts"
            android:entryValues="@array/color_values"
            android:icon="@drawable/outline_format_color_fill_24"
            android:key="themeColor"
            android:summary="%s"
            app:singleLineTitle="false"
            android:title="@string/settings_theme_color" />
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/theme_texts"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/outline_dark_mode_24"
            android:key="darkTheme"
            android:summary="%s"
            app:singleLineTitle="false"
            android:title="@string/dark_theme" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_invert_colors_24"
            android:key="blackDarkTheme"
            android:summary="@string/settings_pure_black_dark_theme_summary"
            app:singleLineTitle="false"
            android:title="@string/settings_pure_black_dark_theme" />
    </PreferenceCategory>
  
    <PreferenceCategory android:title="@string/settings_module">
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_hide_image_24"
            android:key="hideIcon"
            android:summary="@string/settings_hide_icon_summary"
            app:singleLineTitle="false"
            android:title="@string/settings_hide_icon" />
    </PreferenceCategory>

</PreferenceScreen>
